# tolk

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml  dev-release.yml  linux.yml  win.yml
docs/: CHANGELOG.md  README.md  SR-APIs.md  build.md
examples/c#/: CMakeLists.txt  ConsoleApp.cs
examples/java/: CMakeLists.txt  ConsoleApp.java
libs/: README.md
src/: Makefile  ScreenReaderDriverBOY.cpp  ScreenReaderDriverBOY.h  ScreenReaderDriverZDSR.cpp  ScreenReaderDriverZDSR.h  Tolk.cpp
src/dotnet/: CMakeLists.txt
src/java/: CMakeLists.txt
